fixed z-index bug between autocomplete and choice buttons

--- a/smashers/static/smashers/sass/screen.scss
+++ b/smashers/static/smashers/sass/screen.scss
@@ -129,7 +129,7 @@ a:hover, a:focus {
             left: 50%;
             top: 20px;
             margin-left: -44px;
-            z-index: 100;
+            z-index: 10;
 
             button::before {
                 display: none;
