--- a/smashers/static/smashers/stylesheets/base.css
+++ b/smashers/static/smashers/stylesheets/base.css
@@ -1143,7 +1143,7 @@ a:hover, a:focus {
   left: 50%;
   top: 20px;
   margin-left: -44px;
-  z-index: 100;
+  z-index: 10;
 }
 /* line 134, ../sass/screen.scss */
 #choices li.show-matches-wrapper button::before {
